--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,11 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform-check": false,
+        "platform": {
+            "php":"7.1.0"
+        }
     },
     "extra": {
         "laravel": {
